syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sSmok/auth/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc CreateMessage(CreateMessageRequest) returns (google.protobuf.Empty);
}

message UserInfo {
  string name = 1;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ChatInfo {
  string name = 1;
  repeated int64 user_ids = 2;
  repeated int64 messages_ids = 3;
}

message Chat {
  int64 id = 1;
  ChatInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message MessageInfo {
  int64 user_id = 1;
  int64 chat_id = 2;
  string text = 3;
}

message Message {
  int64 id = 1;
  MessageInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateUserRequest {
  UserInfo info = 1;
}

message CreateUserResponse {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message CreateChatRequest {
  ChatInfo info = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message CreateMessageRequest {
  MessageInfo info = 1;
}